--- a/templates/users/form.phtml
+++ b/templates/users/form.phtml
@@ -1,11 +1,13 @@
 <h1>Пользователи, добавленные из формы</h1>
 
 <table>
-    <?php foreach ($users as $user): ?>
-        <tr>
-            <td>
-                <?= $user ?>
-            </td>
-        </tr>
+    <?php foreach ($users as $array): ?>
+            <tr>
+                <td>
+                    <?= $array['id'] ?>
+                    <?= $array['name'] ?>
+                    <?= $array['email'] ?>
+                </td>
+            </tr>
     <?php endforeach ?>
 </table>
