--- a/templates/users/show.phtml
+++ b/templates/users/show.phtml
@@ -3,16 +3,7 @@
 <table>
     <tr>
         <td>
-            <?= htmlspecialchars($user['id']) ?>
-        </td>
-        <td>
-            <?= htmlspecialchars($user['firstName']) ?>
-        </td>
-        <td>
-            <?= htmlspecialchars($user['lastName']) ?>
-        </td>
-        <td>
-            <?= htmlspecialchars($user['email']) ?>
+            <?= htmlspecialchars($user[0]) ?>
         </td>
     </tr>
 </table>
